--- a/src/templates/allFilms.hbs
+++ b/src/templates/allFilms.hbs
@@ -2,7 +2,7 @@
   <input type="text" id="movie-input"/>
   <ul id="movies">
   </ul>
-  <button>prev</button>
+  <button class="pug-btn" id="prev-btn">&lt</button>
   <div id="pug-div"></div>
-  <button>next</button>
+  <button class="pug-btn" id="next-btn">&gt</button>
 </div>
