--- a/src/templates/cardTempl.hbs
+++ b/src/templates/cardTempl.hbs
@@ -16,7 +16,7 @@
     <h2 class="details-info-title">About</h2>
     <p>{{this.overview}}</p>
     <div class="details-info-links">
-      <button href="" class="false" id="watched-btn"><img src="" alt="">Add to watched</button>
-      <button href="" class="false" id="queue-btn"><img src="" alt="">Add to queue</button></div>
+      <button href="" id="watched-btn"><img src="" alt="">Add to watched</button>
+      <button href="" id="queue-btn"><img src="" alt="">Add to queue</button></div>
   </div>
 </div>
