--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,19 @@ body {
   border: 1px solid #a8a6a6;
   /*  background-image: ; */
 }
+
+.pug-btn {
+  width: auto;
+  height: 50px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  text-decoration: none;
+  background-color: #f6f6f6;
+  border: 3px solid #e9e9e9;
+  border-radius: 6px;
+}
+
 .poster_home {
   width: 347px;
   height: 136px;
@@ -79,8 +92,9 @@ h3 {
   color: #556270;
   text-decoration: none;
   width: 120px;
-  padding: 0px;
+  padding: 0;
   height: 55px;
+  margin-right: 30px;
 }
 
 .menu-item {
@@ -158,4 +172,52 @@ h3 {
     width: 250px;
     font-size: 20px;
   }
+}
+
+
+.watched-container {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  background-color: white;
+  padding: 0;
+  margin: 0;
+  box-shadow: 0 5px 5px #ebebeb;
+}
+
+.btn {
+  cursor: pointer;
+  width: 140px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  background-color: white;
+  color: #556270;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  text-decoration: none;
+  border-bottom: 3px solid #556270;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  transition: ease-out 400ms;
+}
+
+.btn:hover {
+  background-color: #77c1bb;
+  border: none;
+  color: white;
+
+}
+
+.btn.active {
+  background-color: #77c1bb;
+  border: none;
+  color: white;
 }
