--- a/src/templates/library.hbs
+++ b/src/templates/library.hbs
@@ -1,9 +1,9 @@
 <div class="container">
-  <button class="list-type-button" data-type="{{this.watched}}">Watched</button>
-  <button class="list-type-button" data-type="{{this.queue}}">Queue</button>
+  <div class="watched-container">
+    <button class="btn watched-btn list-type-button" data-type="{{this.watched}}">Watched</button>
+    <button class="btn queue-btn list-type-button" data-type="{{this.queue}}">Queue</button>
+  </div>
   <ul id="movies">
   </ul>
-  <button>prev</button>
   <div id="pug-div"></div>
-  <button>next</button>
 </div>
