--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ body {
 }
 #movie-input {
   margin: 50px;
-  width: 500px;
+  width: 288px;
   border-radius: 6px;
   font-size: 20px;
   padding: 8px 0 6px 14px;
@@ -28,21 +28,46 @@ body {
   /*  background-image: ; */
 }
 .poster_home {
+  position: relative;
   width: 347px;
   height: 136px;
 }
-h3 {
+.movie-text {
+  position: absolute;
   color: #ffffff;
   font-family: 'Roboto', sans-serif;
   font-size: 15px;
   font-weight: 500;
   line-height: 17.4px;
+  text-align: left;
+  bottom: 0;
+  margin: 10px;
+}
+.container {
+  margin: 0 auto;
   text-align: center;
+  max-width: 718px;
+}
+
+#movies {
+  padding: 0;
+  margin: 0 auto;
+}
+@media (min-width: 768px) {
+  #movies {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
 }
 .movie {
   list-style: none;
+  margin-top: 10px;
 }
-
+.poster_home {
+  margin: 0 auto;
+  border-radius: 10px;
+}
 .top-menu {
   width: 100%;
   height: 65px;
@@ -53,7 +78,6 @@ h3 {
   background: #77c1bb;
   padding: 0;
   margin: 0;
-
 }
 
 .menu-main {
@@ -106,7 +130,7 @@ h3 {
 }
 
 .menu-main a:hover {
-  color: #372c48
+  color: #372c48;
 }
 
 @media (min-width: 768px) {
@@ -133,7 +157,6 @@ h3 {
   background: #77c1bb;
   padding: 0;
   margin: 0;
-
 }
 
 .js-footer {
