--- a/src/templates/allFilms.hbs
+++ b/src/templates/allFilms.hbs
@@ -1,5 +1,6 @@
 <div class="container">
-  <input type="text" id="movie-input"/>
+  <div>
+  <input type="text" id="movie-input"/></div>
   <ul id="movies">
   </ul>
   <button>prev</button>
