--- a/src/templates/movies.hbs
+++ b/src/templates/movies.hbs
@@ -2,7 +2,7 @@
   <li class="movie" data-id="{{this.id}}">
     <div class="poster_home"
          style="background-image: url('https://image.tmdb.org/t/p/w400/{{this.backdrop_path}}')">
-      <h3>{{this.title}}</h3>
+      <h3 class="movie-text">{{this.title}}({{this.release_date}})</h3>
     </div>
   </li>
 {{/each}}
